# AI-Teacher-Platform

./: .gitignore  PROJECT_STATUS.md  README.md  Testai.md  package-lock.json
AI-Teacher-Platform/: README.md  docker-compose.yml  package-lock.json  package.json
AI-Teacher-Platform/backend/: README.md  main.py  pyproject.toml
AI-Teacher-Platform/backend/ai_engine/board/: mapper.py  schemas.py
AI-Teacher-Platform/backend/ai_engine/grade/: registry.py
AI-Teacher-Platform/backend/ai_engine/memory/: retriever.py  schemas.py  updater.py
AI-Teacher-Platform/backend/ai_engine/script/: ne_english.py  schemas.py
AI-Teacher-Platform/backend/ai_engine/voice/: ne_english_tts.py  schemas.py
AI-Teacher-Platform/backend/alembic/: env.py
AI-Teacher-Platform/backend/api/: router.py  teacher.py
AI-Teacher-Platform/backend/models/: base.py  lesson.py
AI-Teacher-Platform/backend/schemas/: teacher.py
AI-Teacher-Platform/backend/services/: ai_provider.py
AI-Teacher-Platform/docs/: architecture.md
apps/admin-cms/: vite.config.ts
apps/student-web/: index.html  package.json  tsconfig.json
backend/: .env.example  config.py  main.py  requirements.txt
backend/ai_engine/: orchestrator.py
backend/api/: health.py  lesson.py  pdf.py  router.py  upload.py
backend/database/: connection.py
backend/middleware/: auth.py
backend/models/: memory.py  student.py
backend/schemas/: common.py
backend/services/: rate_limiter.py  storage.py
backend/tests/: test_director.py
backend/websocket/: events.py  manager.py
docs/: api-contracts.md  stage1-checklist.md
(+172 files in other folders)
